z-index mobile nav fix?

--- a/src/components/Nav/_nav-button.scss
+++ b/src/components/Nav/_nav-button.scss
@@ -1,6 +1,6 @@
 #nav-button {
   position: relative;
-  z-index: 100;
+  z-index: 1000;
   .nav-icon {
     width: 40px;
     height: 23px;
